# paratreet

./: .gitignore  .gitmodules  README.md  README.txt
examples/: CentroidData.h  Collision.C  CollisionTracker.h  CollisionVisitor.h  DensityVisitor.h  DensityVisitorDen.h  Ewald.C  Ewald.h  EwaldData.h  Gravity.C  GravityVisitor.h  Main.C  Main.ci  Main.h  Makefile  MultipoleMoments.h  NeighborListCollector.h  NeighborListCollectorDen.h  NullSPH.h  PerLeafFunctions.h  PressureVisitor.h  SPH.C  SPHUtils.h  SmoothSym.C  VisitAll.C  VisitAllVisitor.h  edit  joey  joey.tipsy  meh  moments.h  out1ppn  out20ppn  test  test.acc  test.den  thetap1.acc  unsure.acc
framework/: Makefile
inputgen/: 100.tipsy  100k.tipsy  Makefile  Particle.h  README  common.h  disk4000.ic  gen_util.cpp  plummer  plummer.cpp  tipsyPlummer  tipsyPlummer.cpp
searchAlgos/: CountVisitor.h  Main.C  Main.ci  Main.h  Makefile  SearchData.h  VisitAll.C  VisitAllVisitor.h
simple/: BoundingBox.C  BoundingBox.h  BufferedVec.h  CacheManager.h  (+56 more)
utility/structures/: Box.h  CodeUnits.h  Interpolate.h  Interval.h  Makefile  Makefile.MacOSX  Makefile.in  NChilReader.cpp  NChilReader.h  OrientedBox.h  PeriodicBoundaryConditions.h  PlanetParticleFinder.h  Properties.h  SFC.cpp  SFC.h  SPH_Kernel.h  SS.cpp  SS.h  Shape.h  Space.h  Sphere.h  SwapEndianness.h  TaggedVector3D.h  TipsyFile.cpp  TipsyFile.h  TipsyParticles.h  TipsyReader.cpp  TipsyReader.h  TypeHandling.h  TypeSelection.h  TypedArray.h  Vector3D.h  aggregate_xdr.h  browse  browse.cpp  config.h  config.h.in  config.status  configure  configure.ac  (+15 more)
(+231 files in other folders)
